[project]
name = "auto-vpngate"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pyquery",
    "aiohttp",
    "aiodns",
    "requests",
    "pytest-asyncio",
    "google-cloud-firestore",
    "flask",
    "prettytable",
]

[dependency-groups]
dev = [
    "gunicorn",
    "python-dotenv>=1.2.2",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
